# net-4gd

./: CMakeLists.txt  README.md  n4gd.pc.in
include/n4gd/: Connection.h  Ipv4.h  SocketInternal.h  UdpSocket.h  Utils.h  pch.h
src/: Connection.cpp  pch.cpp
src/Address/: Ipv4.cpp
src/Socket/: UdpSocket.cpp
src/Socket/Platform/: UdpSocket_APPLE.cpp  UdpSocket_UNIX.cpp  UdpSocket_WIN32.cpp
tests/: CMakeLists.txt  CmakeLists.txt  ConnectionTest.cpp  client.cpp  main.cpp  server.cpp
